# Job-Application-Filling-Agent

./: .gitignore  AIRTABLE_SETUP.md  README.md
backend/: pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: airtable_client.py  intelligence.py  main.py  matcher.py  models.py  questions.py
extension/: package-lock.json  package.json  vite.config.ts
extension/public/: manifest.json
extension/src/: App.css  App.tsx  index.css
extension/src/components/: Questionnaire.css  Questionnaire.tsx
extension/src/content/: index.ts
